# ff12rng

./: .gitignore  .goreleaser.yaml  LICENSE  LICENSE.md  Makefile  README.md  flake8.sh  go.mod  go.sum  pyproject.toml  repl.py  repl.sh  tui.go
.github/workflows/: release.yaml
cmd/ff12rng/: main.go
internal/cmd/: root.go
internal/memscan/: mem.go  mem_test.go  scan.go
internal/mt/: mt19937.go  mt19937_test.go  state.go
internal/sig/: sig.go  sig_test.go
internal/ui/: layout.go  style.go
internal/util/: read.go
src/linuxff12rnghelper/: __init__.py  console.py  ffxii.py  memory.py  message.py  mt19937.py  tui.py  util.py
tests/: test_memory.py  test_process.py  test_tui.py
