[tool.poetry]
name = "linuxff12rnghelper"
version = "0.1.0"
description = "Watch the RNG of a running FF12 TZA (Wine) process in Linux"
authors = ["J <gadrev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
bpython = "^0.21"
mypy = "^0.910"

[tool.poetry.scripts]
linuxff12rnghelper = 'linuxff12rnghelper.console:run'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# for VSCode
[tool.pyright]
include = ["src/"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
